--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,7 +13,8 @@
     android:layout_height="match_parent"
     android:background="#F1F3F6"
     android:orientation="vertical"
-    tools:context=".MainActivity">
+    tools:context=".MainActivity"
+    tools:ignore="RedundantNamespace">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -73,7 +74,8 @@
                 android:layout_weight="1"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Quick Transactions"/>
+                android:text="Quick Transactions"
+                tools:ignore="HardcodedText" />
 
             <TextView
                 android:layout_weight="1"
@@ -81,14 +83,16 @@
                 android:layout_height="wrap_content"
                 android:gravity="right"
                 android:clickable="true"
-                android:text="See all"/>
+                android:text="See all"
+                tools:ignore="HardcodedText,KeyboardInaccessibleWidget,RtlHardcoded" />
         </LinearLayout>
 
         <LinearLayout
             android:layout_margin="20dp"
             android:layout_width="match_parent"
             android:layout_height="60dp"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            tools:ignore="DisableBaselineAlignment">
 
             <LinearLayout
                 android:clickable="true"
@@ -96,68 +100,79 @@
                 android:layout_weight="1"
                 android:background="@drawable/color1"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="match_parent"
+                tools:ignore="KeyboardInaccessibleWidget,UnusedAttribute">
 
                 <ImageView
                     android:layout_margin="10dp"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:src="@drawable/gopay"/>
+                    android:src="@drawable/gopay"
+                    tools:ignore="ContentDescription" />
             </LinearLayout>
 
 
 
             <RelativeLayout
                 android:layout_width="15dp"
-                android:layout_height="match_parent"/>
+                android:layout_height="match_parent"
+                tools:ignore="UselessLeaf" />
             <LinearLayout
                 android:clickable="true"
                 android:foreground="?android:attr/selectableItemBackground"
                 android:layout_weight="1"
                 android:background="@drawable/color2"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="match_parent"
+                tools:ignore="KeyboardInaccessibleWidget,UnusedAttribute">
 
                 <ImageView
                     android:layout_margin="10dp"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:src="@drawable/ovo"/>
+                    android:src="@drawable/ovo"
+                    tools:ignore="ContentDescription" />
             </LinearLayout>
             <RelativeLayout
                 android:layout_width="15dp"
-                android:layout_height="match_parent"/>
+                android:layout_height="match_parent"
+                tools:ignore="UselessLeaf" />
             <LinearLayout
                 android:clickable="true"
                 android:foreground="?android:attr/selectableItemBackground"
                 android:layout_weight="1"
                 android:background="@drawable/color3"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="match_parent"
+                tools:ignore="KeyboardInaccessibleWidget,UnusedAttribute">
 
                 <ImageView
                     android:layout_margin="10dp"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:src="@drawable/npc"/>
+                    android:src="@drawable/npc"
+                    tools:ignore="ContentDescription" />
             </LinearLayout>
 
             <RelativeLayout
                 android:layout_width="15dp"
-                android:layout_height="match_parent"/>
+                android:layout_height="match_parent"
+                tools:ignore="UselessLeaf" />
             <LinearLayout
                 android:clickable="true"
                 android:foreground="?android:attr/selectableItemBackground"
                 android:layout_weight="1"
                 android:background="@drawable/color4"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="match_parent"
+                tools:ignore="KeyboardInaccessibleWidget,UnusedAttribute">
 
                 <ImageView
                     android:layout_margin="10dp"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:src="@drawable/add"/>
+                    android:src="@drawable/add"
+                    tools:ignore="ContentDescription" />
             </LinearLayout>
 
         </LinearLayout>
@@ -183,7 +198,8 @@
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="100dp"/>
+            android:layout_height="100dp"
+            tools:ignore="UselessLeaf" />
 
         <LinearLayout
             android:orientation="horizontal"
@@ -196,21 +212,24 @@
                 android:textColor="#1A4D9A"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="All Transaksi"/>
+                android:text="All Transaksi"
+                tools:ignore="HardcodedText" />
             <TextView
                 android:clickable="true"
                 android:layout_weight="1"
                 android:gravity="right"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="See All"/>
+                android:text="See All"
+                tools:ignore="HardcodedText,KeyboardInaccessibleWidget,RtlHardcoded" />
         </LinearLayout>
 
         <LinearLayout
             android:layout_marginTop="20dp"
             android:orientation="horizontal"
             android:layout_width="match_parent"
-            android:layout_height="90dp">
+            android:layout_height="90dp"
+            tools:ignore="DisableBaselineAlignment">
 
             <LinearLayout
                 android:clickable="true"
@@ -218,20 +237,23 @@
                 android:layout_weight="1"
                 android:orientation="vertical"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="match_parent"
+                tools:ignore="KeyboardInaccessibleWidget,UnusedAttribute">
 
                 <LinearLayout
                     android:layout_weight="1"
                     android:background="@drawable/pilih1"
                     android:orientation="vertical"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
+                    android:layout_height="wrap_content"
+                    tools:ignore="NestedWeights">
 
                 <ImageView
                     android:layout_margin="20dp"
                     android:src="@drawable/transfer"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"/>
+                    android:layout_height="match_parent"
+                    tools:ignore="ContentDescription" />
                 </LinearLayout>
                 <TextView
                     android:layout_marginTop="10dp"
@@ -241,14 +263,16 @@
                     android:text="Transfer"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:gravity="center"/>
+                    android:gravity="center"
+                    tools:ignore="HardcodedText" />
 
             </LinearLayout>
 
 
             <RelativeLayout
                 android:layout_width="15dp"
-                android:layout_height="match_parent"/>
+                android:layout_height="match_parent"
+                tools:ignore="UselessLeaf" />
 
             <LinearLayout
                 android:clickable="true"
@@ -256,20 +280,23 @@
                 android:layout_weight="1"
                 android:orientation="vertical"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="match_parent"
+                tools:ignore="KeyboardInaccessibleWidget,UnusedAttribute">
 
                 <LinearLayout
                     android:layout_weight="1"
                     android:background="@drawable/pilih2"
                     android:orientation="vertical"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
+                    android:layout_height="wrap_content"
+                    tools:ignore="NestedWeights">
 
                     <ImageView
                         android:layout_margin="20dp"
                         android:src="@drawable/dompet"
                         android:layout_width="match_parent"
-                        android:layout_height="match_parent"/>
+                        android:layout_height="match_parent"
+                        tools:ignore="ContentDescription" />
                 </LinearLayout>
                 <TextView
                     android:layout_marginTop="10dp"
@@ -279,33 +306,38 @@
                     android:text="Bayar"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:gravity="center"/>
+                    android:gravity="center"
+                    tools:ignore="HardcodedText" />
 
             </LinearLayout>
 
             <RelativeLayout
                 android:layout_width="15dp"
-                android:layout_height="match_parent"/>
+                android:layout_height="match_parent"
+                tools:ignore="UselessLeaf" />
             <LinearLayout
                 android:clickable="true"
                 android:foreground="?android:attr/selectableItemBackground"
                 android:layout_weight="1"
                 android:orientation="vertical"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="match_parent"
+                tools:ignore="KeyboardInaccessibleWidget,UnusedAttribute">
 
                 <LinearLayout
                     android:layout_weight="1"
                     android:background="@drawable/pilih3"
                     android:orientation="vertical"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
+                    android:layout_height="wrap_content"
+                    tools:ignore="NestedWeights">
 
                     <ImageView
                         android:layout_margin="20dp"
                         android:src="@drawable/beli"
                         android:layout_width="match_parent"
-                        android:layout_height="match_parent"/>
+                        android:layout_height="match_parent"
+                        tools:ignore="ContentDescription" />
                 </LinearLayout>
                 <TextView
                     android:layout_marginTop="10dp"
@@ -315,33 +347,38 @@
                     android:text="Beli"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:gravity="center"/>
+                    android:gravity="center"
+                    tools:ignore="HardcodedText" />
 
             </LinearLayout>
 
             <RelativeLayout
                 android:layout_width="15dp"
-                android:layout_height="match_parent"/>
+                android:layout_height="match_parent"
+                tools:ignore="UselessLeaf" />
             <LinearLayout
                 android:clickable="true"
                 android:foreground="?android:attr/selectableItemBackground"
                 android:layout_weight="1"
                 android:orientation="vertical"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="match_parent"
+                tools:ignore="KeyboardInaccessibleWidget,UnusedAttribute">
 
                 <LinearLayout
                     android:layout_weight="1"
                     android:background="@drawable/pilih4"
                     android:orientation="vertical"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
+                    android:layout_height="wrap_content"
+                    tools:ignore="NestedWeights">
 
                     <ImageView
                         android:layout_margin="20dp"
                         android:src="@drawable/emoney"
                         android:layout_width="match_parent"
-                        android:layout_height="match_parent"/>
+                        android:layout_height="match_parent"
+                        tools:ignore="ContentDescription" />
                 </LinearLayout>
                 <TextView
                     android:layout_marginTop="10dp"
@@ -351,7 +388,8 @@
                     android:text="E-Money"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:gravity="center"/>
+                    android:gravity="center"
+                    tools:ignore="HardcodedText" />
 
             </LinearLayout>
 
@@ -369,14 +407,16 @@
                 android:textColor="#1A4D9A"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Cards"/>
+                android:text="Cards"
+                tools:ignore="HardcodedText" />
             <TextView
                 android:clickable="true"
                 android:layout_weight="1"
                 android:gravity="right"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="See All"/>
+                android:text="See All"
+                tools:ignore="HardcodedText,KeyboardInaccessibleWidget,RtlHardcoded" />
         </LinearLayout>
 
         <LinearLayout
@@ -395,12 +435,14 @@
                     android:layout_gravity="center"
                     android:src="@drawable/add"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"/>
+                    android:layout_height="wrap_content"
+                    tools:ignore="ContentDescription" />
 
             </LinearLayout>
             <RelativeLayout
                 android:layout_width="15dp"
-                android:layout_height="match_parent"/>
+                android:layout_height="match_parent"
+                tools:ignore="UselessLeaf" />
 
 
             <ImageView
@@ -408,7 +450,8 @@
                 android:cropToPadding="true"
                 android:src="@drawable/visa"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"/>
+                android:layout_height="wrap_content"
+                tools:ignore="ContentDescription" />
         </LinearLayout>
 
         <LinearLayout
@@ -424,21 +467,24 @@
                 android:layout_marginTop="15dp"
                 android:orientation="vertical"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                tools:ignore="UselessParent">
                 <TextView
                     android:textSize="18sp"
                     android:textStyle="bold"
                     android:textColor="#1A4D9A"
                     android:text="Monthly Spending"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"/>
+                    android:layout_height="wrap_content"
+                    tools:ignore="HardcodedText" />
                 <TextView
                     android:textSize="20sp"
                     android:textStyle="bold"
                     android:textColor="#226AD8"
                     android:text="Rp. 3.000.566.0000"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"/>
+                    android:layout_height="wrap_content"
+                    tools:ignore="HardcodedText" />
             </LinearLayout>
         </LinearLayout>
 
